Introduce utility objects for expression evaluation
Plus a temporary JVM flag to enable experimental Java 21 features for JUnit.